WorldEditor: Add parent-child management and selection improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,11 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(SK_ENGINE_VERSION "0.0.1")
 add_compile_definitions(SK_ENGINE_VERSION="${SK_ENGINE_VERSION}")
-add_compile_definitions(SK_ENGINE_CURRENT_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
 
 string(TIMESTAMP TODAY "%Y%m%d")
 add_compile_definitions(SK_VERSION="${SK_ENGINE_VERSION}-${TODAY}")
 
-add_compile_definitions(SK_DEV_ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/Assets")
+#add_compile_definitions(SK_DEV_ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/Assets")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
